Test private channels