@@ -123,12 +123,11 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 	@Test
 	public void setUpQueueForPrivateChannels(){
 		ServiceProvider serviceProvider = new ServiceProvider("service-provider");
-
-		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint(serviceProvider.getName(), 80, "queueName");
-		PrivateChannel privateChannel = new PrivateChannel(Collections.singleton(new Peer("private-channel")), PrivateChannelStatus.REQUESTED, "my-channel", endpoint,"service-provider");
+		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint("my-interchange", 5671, "queueName");
+		PrivateChannel privateChannel = new PrivateChannel(Collections.singleton(new Peer("peer")), PrivateChannelStatus.REQUESTED, "my-channel", endpoint,"service-provider");
 
 		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
 
 		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
 
@@ -141,22 +140,20 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 
 		verify(privateChannelRepository, times(1)).findAllByServiceProviderName(any());
 		verify(privateChannelRepository, times(1)).findAllByStatusAndServiceProviderName(any(), any());
-
 	}
 
 	@Test
 	public void tearDownQueueForPrivateChannels(){
 		ServiceProvider serviceProvider = new ServiceProvider("service-provider");
-		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint(serviceProvider.getName(), 80, "queueName");
-		PrivateChannel privateChannel = new PrivateChannel(Collections.singleton(new Peer("private-channel")), PrivateChannelStatus.REQUESTED, "my-channel", endpoint,"service-provider");
+		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint("my-interchange", 5671, "queueName");
+		PrivateChannel privateChannel = new PrivateChannel(Collections.singleton(new Peer("peer")), PrivateChannelStatus.REQUESTED, "my-channel", endpoint,"service-provider");
 
 		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
 
 		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
 
 		privateChannel.setStatus(PrivateChannelStatus.TEAR_DOWN);
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of());
 
 		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
 
@@ -173,24 +170,23 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 	@Test
 	public void doNotRemoveServiceProviderFromGroupWhenTheyAreServiceProviderInAnotherChannel() {
 		ServiceProvider serviceProvider = new ServiceProvider("service-provider");
-		PrivateChannelEndpoint endpoint_1 = new PrivateChannelEndpoint(serviceProvider.getName(),80,"queueName_1");
-		PrivateChannelEndpoint endpoint_2 = new PrivateChannelEndpoint(serviceProvider.getName(), 80, "queueName_2");
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange", 5671,"queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-2");
 
-		PrivateChannel privateChannel_1 = new PrivateChannel(Collections.singleton(new Peer("private-channel-1")), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint_1,"service-provider");
-		PrivateChannel privateChannel_2 = new PrivateChannel(Collections.singleton(new Peer("private-channel-2")), PrivateChannelStatus.CREATED, "my-channel-2", endpoint_2, "service-provider");
+		PrivateChannel privateChannel1 = new PrivateChannel(Collections.singleton(new Peer("peer-1")), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1,"service-provider");
+		PrivateChannel privateChannel2 = new PrivateChannel(Collections.singleton(new Peer("peer-2")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "service-provider");
 
-		when(serviceProviderRepository.save(serviceProvider)).thenReturn(serviceProvider);
-		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel_1, privateChannel_2));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel_1, privateChannel_2));
-
-		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
-		privateChannel_1.setStatus(PrivateChannelStatus.TEAR_DOWN);
-
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel_2));
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel1, privateChannel2));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
 
 		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		privateChannel1.setStatus(PrivateChannelStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel2));
 		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Collections.emptyList(),Collections.emptyList());
 		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(1L,0L);
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
 
 		assertThat(client.getGroupMember(serviceProvider.getName(),QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
 
@@ -202,32 +198,266 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 
 	@Test
 	public void doNotRemoveServiceProviderFromGroupWhenTheyArePeerInAnotherChannel(){
-		ServiceProvider serviceProvider = new ServiceProvider("service-provider");
-		PrivateChannelEndpoint endpoint_1 = new PrivateChannelEndpoint(serviceProvider.getName(),80,"queueName_1");
-		PrivateChannelEndpoint endpoint_2 = new PrivateChannelEndpoint(serviceProvider.getName(), 80, "queueName_2");
+		ServiceProvider serviceProvider1 = new ServiceProvider("service-provider-1");
+		ServiceProvider serviceProvider2 = new ServiceProvider("service-provider-2");
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-2");
 
-		PrivateChannel privateChannel_1 = new PrivateChannel(Collections.singleton(new Peer("private-channel-1")), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint_1,"service-provider");
-		PrivateChannel privateChannel_2 = new PrivateChannel(Collections.singleton(new Peer("service-provider")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint_2, "service-provider");
+		PrivateChannel privateChannel1 = new PrivateChannel(Collections.singleton(new Peer("peer-1")), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1,"service-provider-1");
+		PrivateChannel privateChannel2 = new PrivateChannel(Collections.singleton(new Peer("service-provider-1")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "service-provider-2");
 
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel1));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(Collections.emptyList());
 
-		when(serviceProviderRepository.save(serviceProvider)).thenReturn(serviceProvider);
-		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel_1, privateChannel_2));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel_1, privateChannel_2));
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
 
-		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
-		privateChannel_1.setStatus(PrivateChannelStatus.TEAR_DOWN);
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel2));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider2.getName())).thenReturn(Collections.emptyList());
 
-		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Collections.emptyList(), Collections.singletonList(privateChannel_2));
-		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(1L,0L);
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(List.of(privateChannel_2));
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
 
-		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
-		assertThat(client.getGroupMember(serviceProvider.getName(),QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+		privateChannel1.setStatus(PrivateChannelStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(List.of(privateChannel1));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(Collections.emptyList());
+		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Collections.singletonList(privateChannel2), Collections.emptyList());
+		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(0L,0L);
+
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
+		assertThat(client.getGroupMember(serviceProvider1.getName(),QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
 
 		verify(privateChannelRepository, times(2)).findAllByPeerNameAndStatus(any(),any());
 		verify(privateChannelRepository, times(2)).countByServiceProviderNameAndStatus(any(),any());
-		verify(privateChannelRepository, times(2)).findAllByServiceProviderName(any());
+		verify(privateChannelRepository, times(3)).findAllByServiceProviderName(any());
+		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
+	}
+
+	@Test
+	public void doNotRemovePeerFromGroupWhenTheyAreServiceProviderInAnotherChannel(){
+		ServiceProvider serviceProvider1 = new ServiceProvider("service-1");
+		ServiceProvider serviceProvider2 = new ServiceProvider("service-2");
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-2");
+
+		PrivateChannel privateChannel1 = new PrivateChannel(Collections.singleton(new Peer("service-2")), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1, "service-1");
+		PrivateChannel privateChannel2 = new PrivateChannel(Collections.singleton(new Peer("service-1")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "service-2");
+
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Arrays.asList(privateChannel1));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(Collections.emptyList());
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
+
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Arrays.asList(privateChannel2));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider2.getName())).thenReturn(Collections.emptyList());
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
+
+		assertThat(privateChannel1.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel2.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+
+		privateChannel2.setStatus(PrivateChannelStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Collections.singletonList(privateChannel1), Collections.emptyList());
+		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(), any())).thenReturn(0L, 1L);
+
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
+		assertThat(client.getGroupMember(serviceProvider1.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+		assertThat(client.getGroupMember(serviceProvider2.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		verify(privateChannelRepository, times(2)).findAllByPeerNameAndStatus(any(),any());
+		verify(privateChannelRepository, times(2)).countByServiceProviderNameAndStatus(any(),any());
+		verify(privateChannelRepository, times(3)).findAllByServiceProviderName(any());
+		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
+	}
+
+	@Test
+	public void doNotRemovePeerFromGroupWhenTheyArePeerInAnotherChannel(){
+		ServiceProvider serviceProvider1 = new ServiceProvider("service-1");
+		ServiceProvider serviceProvider2 = new ServiceProvider("service-2");
+
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-2");
+		PrivateChannelEndpoint endpoint3 = new PrivateChannelEndpoint("my-interchange", 5671, "queueName-3");
+
+		PrivateChannel privateChannel1 = new PrivateChannel(Collections.singleton(new Peer("service-2")),PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1, "service-1");
+		PrivateChannel privateChannel2 = new PrivateChannel(Collections.singleton(new Peer("service-2")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "service-1");
+		PrivateChannel privateChannel3 = new PrivateChannel(Collections.singleton(new Peer("service-1")), PrivateChannelStatus.REQUESTED, "my-channel-3", endpoint3, "service-2");
+
+		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider1.getName())).thenReturn(List.of(privateChannel1, privateChannel2));
+		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider2.getName())).thenReturn(List.of(privateChannel3));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
+
+		privateChannel1.setStatus(PrivateChannelStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByPeerNameAndStatus(any(),any())).thenReturn(Collections.emptyList(),Collections.emptyList());
+		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(1L,1L);
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(List.of(privateChannel2));
+
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
+		assertThat(client.getGroupMember(serviceProvider2.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		verify(privateChannelRepository, times(2)).findAllByPeerNameAndStatus(any(),any());
+		verify(privateChannelRepository, times(2)).countByServiceProviderNameAndStatus(any(),any());
+		verify(privateChannelRepository, times(3)).findAllByServiceProviderName(any());
+		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
+	}
+
+	@Test
+	public void addPeerToPrivateChannelAfterCreation() {
+		ServiceProvider serviceProvider = new ServiceProvider("my-service-provider");
+		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint("my-interchange",5671,"queueName");
+		Peer peer = new Peer("peer");
+		PrivateChannel privateChannel = new PrivateChannel(new HashSet<>(Arrays.asList(peer)), PrivateChannelStatus.REQUESTED, "my-channel", endpoint, "my-service-provider");
+
+		when(serviceProviderRepository.save(serviceProvider)).thenReturn(serviceProvider);
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Collections.singletonList(privateChannel));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("peer", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		Peer newPeer = new Peer("new-peer");
+		privateChannel.addPeers(new HashSet<>(Arrays.asList(newPeer)));
+
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.singletonList(privateChannel));
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(newPeer.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("new-peer", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		verify(privateChannelRepository, times(2)).save(any());
 		verify(privateChannelRepository, times(2)).findAllByStatusAndServiceProviderName(any(), any());
+		verify(privateChannelRepository, times(0)).findAllByPeerNameAndStatus(any(), any());
+		verify(privateChannelRepository, times(0)).countByServiceProviderNameAndStatus(any(), any());
+	}
+
+	@Test
+	public void removePeerToPrivateChannelAfterCreation() {
+		ServiceProvider serviceProvider = new ServiceProvider("my-service-provider");
+		PrivateChannelEndpoint endpoint = new PrivateChannelEndpoint("my-interchange",5671,"queueName");
+		Peer peer1 = new Peer("peer-1");
+		Peer peer2 = new Peer("peer-2");
+		PrivateChannel privateChannel = new PrivateChannel(new HashSet<>(Arrays.asList(peer1, peer2)), PrivateChannelStatus.REQUESTED, "my-channel", endpoint, "my-service-provider");
+
+		when(serviceProviderRepository.save(serviceProvider)).thenReturn(serviceProvider);
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Collections.singletonList(privateChannel));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer1.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(peer2.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("peer-1", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+		assertThat(client.getGroupMember("peer-2", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		peer2.setStatus(PeerStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.singletonList(privateChannel));
+		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Collections.singletonList(privateChannel));
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer1.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(privateChannel.getPeers()).hasSize(1);
+		assertThat(client.getGroupMember("peer-2", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNull();
+
+		verify(privateChannelRepository, times(2)).save(any());
+		verify(privateChannelRepository, times(2)).findAllByStatusAndServiceProviderName(any(), any());
+		verify(privateChannelRepository, times(1)).findAllByPeerNameAndStatus(any(), any());
+		verify(privateChannelRepository, times(1)).countByServiceProviderNameAndStatus(any(), any());
+	}
+
+	@Test
+	public void removePeerToPrivateChannelAfterCreationWhenPeerInMultipleChannels() {
+		ServiceProvider serviceProvider = new ServiceProvider("my-service-provider");
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-2");
+		Peer peer1 = new Peer("peer");
+		Peer peer2 = new Peer("peer");
+
+		PrivateChannel privateChannel1 = new PrivateChannel(new HashSet<>(Arrays.asList(peer1)), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1, "my-service-provider");
+		PrivateChannel privateChannel2 = new PrivateChannel(new HashSet<>(Arrays.asList(peer2)), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "my-service-provider");
+
+		when(serviceProviderRepository.save(serviceProvider)).thenReturn(serviceProvider);
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Arrays.asList(privateChannel1, privateChannel2));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel1.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel2.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer1.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(peer2.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("peer", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		peer2.setStatus(PeerStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider.getName())).thenReturn(Arrays.asList(privateChannel1, privateChannel2));
+		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn(Arrays.asList(privateChannel1, privateChannel2));
+
+		router.syncPrivateChannels(serviceProvider, client.getQpidDelta());
+		assertThat(privateChannel1.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel2.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel1.getPeers()).hasSize(1);
+		assertThat(privateChannel2.getPeers()).hasSize(0);
+		assertThat(peer1.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("peer", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		verify(privateChannelRepository, times(3)).save(any());
+		verify(privateChannelRepository, times(2)).findAllByStatusAndServiceProviderName(any(), any());
+		verify(privateChannelRepository, times(1)).findAllByPeerNameAndStatus(any(), any());
+		verify(privateChannelRepository, times(1)).countByServiceProviderNameAndStatus(any(), any());
+	}
+
+	@Test
+	public void removePeerToPrivateChannelAfterCreationWhenServiceProviderInOtherChannel() {
+		ServiceProvider serviceProvider1 = new ServiceProvider("my-service-provider-1");
+		ServiceProvider serviceProvider2 = new ServiceProvider("my-service-provider-2");
+		PrivateChannelEndpoint endpoint1 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-1");
+		PrivateChannelEndpoint endpoint2 = new PrivateChannelEndpoint("my-interchange",5671,"queueName-2");
+		Peer peer1 = new Peer("peer");
+		Peer peer2 = new Peer("my-service-provider-1");
+
+		PrivateChannel privateChannel1 = new PrivateChannel(new HashSet<>(Arrays.asList(peer1)), PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint1, "my-service-provider-1");
+		PrivateChannel privateChannel2 = new PrivateChannel(new HashSet<>(Arrays.asList(peer2)), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint2, "my-service-provider-2");
+
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Arrays.asList(privateChannel1));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider1.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider1, client.getQpidDelta());
+
+		assertThat(privateChannel1.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer1.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("my-service-provider-1", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+		assertThat(client.getGroupMember("peer", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+
+		when(privateChannelRepository.findAllByServiceProviderName(any())).thenReturn(Arrays.asList(privateChannel2));
+		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider2.getName())).thenReturn(Collections.emptyList());
+
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
+
+		assertThat(privateChannel2.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(peer2.getStatus()).isEqualTo(PeerStatus.CREATED);
+		assertThat(client.getGroupMember("my-service-provider-2", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		peer2.setStatus(PeerStatus.TEAR_DOWN);
+
+		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(), any())).thenReturn(1L);
+
+		router.syncPrivateChannels(serviceProvider2, client.getQpidDelta());
+		assertThat(privateChannel1.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel2.getStatus()).isEqualTo(PrivateChannelStatus.CREATED);
+		assertThat(privateChannel2.getPeers()).hasSize(0);
+		assertThat(client.getGroupMember("my-service-provider-1", QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
+
+		verify(privateChannelRepository, times(3)).save(any());
+		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
+		verify(privateChannelRepository, times(1)).findAllByPeerNameAndStatus(any(), any());
+		verify(privateChannelRepository, times(1)).countByServiceProviderNameAndStatus(any(), any());
 	}
 
 	@Test
@@ -264,80 +494,6 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 		router.syncServiceProviders(List.of(king_gustaf), client.getQpidDelta());
 		router.removeUnwantedSubscriptions(king_gustaf);
 		assertThat(king_gustaf.getSubscriptions().size()).isEqualTo(1);
-
-	}
-
-	@Test
-	@Disabled
-	public void doNotRemovePeerFromGroupWhenTheyAreServiceProviderInAnotherChannel(){
-		ServiceProvider serviceProvider_1 = new ServiceProvider("service-1");
-		ServiceProvider serviceProvider_2 = new ServiceProvider("service-2");
-		PrivateChannelEndpoint endpoint_1 = new PrivateChannelEndpoint(serviceProvider_1.getName(),80,"queueName_1");
-		PrivateChannelEndpoint endpoint_2 = new PrivateChannelEndpoint(serviceProvider_2.getName(), 80, "queueName_2");
-
-		PrivateChannel privateChannel_1 = new PrivateChannel(Collections.singleton(new Peer("service-2")), PrivateChannelStatus.REQUESTED, "my channel 1", endpoint_1, "service-1");
-		PrivateChannel privateChannel_2 = new PrivateChannel(Collections.singleton(new Peer("service-1")), PrivateChannelStatus.REQUESTED, "my channel 2", endpoint_2, "service-2");
-
-		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider_1.getName())).thenReturn(List.of(privateChannel_1));
-		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider_2.getName())).thenReturn(List.of(privateChannel_2));
-
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider_1.getName())).thenReturn(List.of(privateChannel_1));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider_2.getName())).thenReturn(List.of(privateChannel_2));
-
-		router.syncPrivateChannels(serviceProvider_1, client.getQpidDelta());
-		router.syncPrivateChannels(serviceProvider_2, client.getQpidDelta());
-
-		privateChannel_1.setStatus(PrivateChannelStatus.TEAR_DOWN);
-
-		when(privateChannelRepository.findAllByPeerNameAndStatus(any(), any())).thenReturn( Collections.emptyList(),Collections.singletonList(privateChannel_1));
-		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(0L,1L);
-
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider_1.getName())).thenReturn(List.of());
-
-		router.syncPrivateChannels(serviceProvider_1, client.getQpidDelta());
-
-		assertThat(client.getGroupMember(serviceProvider_2.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
-		assertThat(client.getGroupMember(serviceProvider_1.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
-
-		verify(privateChannelRepository, times(2)).findAllByPeerNameAndStatus(any(),any());
-		verify(privateChannelRepository, times(2)).countByServiceProviderNameAndStatus(any(),any());
-		verify(privateChannelRepository, times(3)).findAllByServiceProviderName(any());
-		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
-	}
-
-	@Test
-	public void doNotRemovePeerFromGroupWhenTheyArePeerInAnotherChannel(){
-		ServiceProvider serviceProvider_1 = new ServiceProvider("service-1");
-		ServiceProvider serviceProvider_2 = new ServiceProvider("service-2");
-
-		PrivateChannelEndpoint endpoint_1 = new PrivateChannelEndpoint(serviceProvider_1.getName(), 80, "queueName_1");
-		PrivateChannelEndpoint endpoint_2 = new PrivateChannelEndpoint(serviceProvider_1.getName(), 80, "queueName_2");
-		PrivateChannelEndpoint endpoint_3 = new PrivateChannelEndpoint(serviceProvider_2.getName(), 80, "queueName_3");
-
-		PrivateChannel privateChannel_1 = new PrivateChannel(Collections.singleton(new Peer("service-2")),PrivateChannelStatus.REQUESTED, "my-channel-1", endpoint_1, "service-1");
-		PrivateChannel privateChannel_2 = new PrivateChannel(Collections.singleton(new Peer("service-2")), PrivateChannelStatus.REQUESTED, "my-channel-2", endpoint_2, "service-1");
-		PrivateChannel privateChannel_3 = new PrivateChannel(Collections.singleton(new Peer("service-1")), PrivateChannelStatus.REQUESTED, "my-channel-3", endpoint_3, "service-2");
-
-		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider_1.getName())).thenReturn(List.of(privateChannel_1, privateChannel_2));
-		when(privateChannelRepository.findAllByServiceProviderName(serviceProvider_2.getName())).thenReturn(List.of(privateChannel_3));
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider_1.getName())).thenReturn(List.of(privateChannel_1, privateChannel_2));
-
-		router.syncPrivateChannels(serviceProvider_2, client.getQpidDelta());
-		router.syncPrivateChannels(serviceProvider_1, client.getQpidDelta());
-
-		privateChannel_1.setStatus(PrivateChannelStatus.TEAR_DOWN);
-
-		when(privateChannelRepository.findAllByPeerNameAndStatus(any(),any())).thenReturn(Collections.emptyList(),Collections.emptyList());
-		when(privateChannelRepository.countByServiceProviderNameAndStatus(any(),any())).thenReturn(1L,1L);
-		when(privateChannelRepository.findAllByStatusAndServiceProviderName(PrivateChannelStatus.CREATED, serviceProvider_1.getName())).thenReturn(List.of(privateChannel_2));
-
-		router.syncPrivateChannels(serviceProvider_1, client.getQpidDelta());
-		assertThat(client.getGroupMember(serviceProvider_2.getName(), QpidClient.CLIENTS_PRIVATE_CHANNELS_GROUP_NAME)).isNotNull();
-
-		verify(privateChannelRepository, times(2)).findAllByPeerNameAndStatus(any(),any());
-		verify(privateChannelRepository, times(2)).countByServiceProviderNameAndStatus(any(),any());
-		verify(privateChannelRepository, times(3)).findAllByServiceProviderName(any());
-		verify(privateChannelRepository, times(3)).findAllByStatusAndServiceProviderName(any(), any());
 	}
 
 	@Test
@@ -837,7 +993,6 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 		assertThat(localDelivery.getStatus()).isEqualTo(LocalDeliveryStatus.REQUESTED);
 	}
 
-
 	@Test
 	public void localSubscriptionConnectsToCapabilityExchange() {
 		ServiceProvider mySP = new ServiceProvider("my-sp");
@@ -1229,10 +1384,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 		when(serviceProviderRepository.findAll()).thenReturn(Arrays.asList(serviceProvider));
 		when(matchRepository.findAllByLocalSubscriptionId(localSubscription.getId())).thenReturn(Arrays.asList(match));
 		router.createBindingsWithMatches();
-		//TODO asserts, verify that the methods are called
 		assertThat(client.exchangeExists(exchangeName)).isFalse();
 		assertThat(client.getQueuePublishingLinks(source)).doesNotContain(new Binding(source, name, new Filter("a = b")));
-
 	}
 
 	@Test
@@ -1277,9 +1430,6 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 		when(serviceProviderRepository.findAll()).thenReturn(Arrays.asList(serviceProvider));
 		when(matchRepository.findAllByLocalSubscriptionId(localSubscription.getId())).thenReturn(Arrays.asList(match));
 		router.createBindingsWithMatches();
-		//TODO asserts, verify that the methods are called
 		assertThat(client.queueExists(source)).isFalse();
 	}
-
-
 }
